--- a/style.scss
+++ b/style.scss
@@ -5,14 +5,17 @@
 
 @import "./assets/compenents/core";
 @import "./assets/compenents/header";
+
 @import "./assets/compenents/hero";
 @import "./assets/compenents/company";
 @import "./assets/compenents/base";
-@import "./assets/compenents/parking";
-@import "./assets/compenents/photo";
+@import "./assets/compenents/_all";
+
 @import "./assets/compenents/project";
+@import "./assets/compenents/parking";
+
 @import "./assets/compenents/certificate";
 
-
+@import "./assets/compenents/photo";
 
 @import "./assets/compenents/footer";
